# cutr

./: .gitignore  Cargo.toml  LICENSE  README.md  mk-outs.sh
src/: main.rs
tests/: cli.rs
tests/expected/: output_delimiter.csv
